Refined Dockerfiles for production / debug config

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -2,12 +2,12 @@ version: "3"
 
 services:
   tsc-node-api:
-    build: 
+    build:
       context: ./
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile-debug
     user: "node"
     working_dir: /home/node/app
     volumes:
       - .:/home/node/app
     ports:
-      - "9000:9000"
+      - "9000:5000"
