--- a/Dockerfile-debug
+++ b/Dockerfile-debug
@@ -11,9 +11,9 @@ RUN npm install
 # bundle app source
 COPY . .
 
-# bind application to port 9000
-EXPOSE 9000
+# bind application to port 5000
+EXPOSE 5000
 
-CMD [ "npm", "prod" ]
+CMD [ "npm", "start" ]
 
 
